[gd_scene load_steps=4 format=2]

[ext_resource path="res://res/images/pixel.svg" type="Texture" id=1]
[ext_resource path="res://src/entities/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35, 50 )

[node name="Enemy" type="Node2D"]
script = ExtResource( 2 )

[node name="EnemyBody" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 5

[node name="Sprite" type="Sprite" parent="EnemyBody"]
scale = Vector2( 70, 100 )
texture = ExtResource( 1 )

[node name="Hurtbox" type="CollisionShape2D" parent="EnemyBody"]
visible = false
shape = SubResource( 1 )

[node name="HitboxArea" type="Area2D" parent="EnemyBody"]
collision_layer = 0
collision_mask = 2

[node name="Hitbox" type="CollisionShape2D" parent="EnemyBody/HitboxArea"]
visible = false
shape = SubResource( 1 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="EnemyBody/HitboxArea" to="." method="_on_HitboxArea_body_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
